# cmake-101

./: .gitignore  CMakeLists.txt  README.md  example_encode.cpp
libs/: CMakeLists.txt
slides/: .directory  dynamic_cast-CMake-101.odp
